# lirc

./: CMakeLists.txt  client.c  irc.c  irc.h
.github/workflows/: main.yml
